# listinha_backend

./: README.md  manage.py  pyproject.toml
backend/: admin.py  models.py  serializers.py
backend/migrations/: 0001_initial.py  0002_myuser_user_id.py  0003_remove_myuser_families_myuser_families.py  0004_alter_family_family_members_alter_myuser_families.py  0005_smcart_cart_orders.py  0006_family_has_cart.py  0007_remove_smcart_completed.py
backend/views/: __init__.py  cart.py  family.py  order.py  product.py  request.py  token.py  user.py
listinha/: asgi.py  settings.py  urls.py  wsgi.py
